[gd_scene load_steps=16 format=2]

[ext_resource path="res://main-screens/menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Aldrich/aldrich-title.tres" type="DynamicFont" id=2]
[ext_resource path="res://imgs/unlock.png" type="Texture" id=3]
[ext_resource path="res://imgs/neutral-menu-cpy.png" type="Texture" id=4]
[ext_resource path="res://fonts/Aldrich/aldrich-button.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/Aldrich/aldrich_regular.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/Aldrich/Aldrich-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://imgs/yellow-light.png" type="Texture" id=8]
[ext_resource path="res://imgs/red-light.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

size = 27
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="AtlasTexture" id=2]

flags = 0
region = Rect2( 0, 0, 0, 0 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=5]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=6]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[node name="Menu" type="Node"]

script = ExtResource( 1 )
is_instruction_read = false

[node name="gameTitle" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 367.0
margin_top = 90.0
margin_right = 857.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Máquina de Senhas"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="unlock" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 866.719, 282.361 )
texture = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="2"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion", "Transform", "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = -2.0
margin_right = 1229.0
margin_bottom = 671.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="Buttons" type="Node2D" parent="." index="3"]

[node name="btnInstrucoes" type="Button" parent="Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 277.0
margin_top = 471.0
margin_right = 479.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.96875, 0.96875, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.858824, 0.858824, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "INSTRUÇÕES"
flat = true
align = 1
_sections_unfolded = [ "Focus", "Material", "Textures", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="btnJogar" type="Button" parent="Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 536.0
margin_top = 474.0
margin_right = 722.0
margin_bottom = 562.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882813, 0.862122, 0.862122, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "JOGAR"
flat = true
align = 1
_sections_unfolded = [ "Textures", "custom_colors", "custom_fonts" ]

[node name="btnSair" type="Button" parent="Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 771.0
margin_top = 476.0
margin_right = 959.0
margin_bottom = 563.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.858824, 0.858824, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "SAIR"
icon = SubResource( 2 )
flat = true
align = 1
_sections_unfolded = [ "Textures", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="yellowCircle" type="Sprite" parent="." index="4"]

editor/display_folded = true
visible = false
position = Vector2( 382.237, 324.762 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="yellowCircle" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/blink = SubResource( 3 )
blend_times = [  ]

[node name="yellowCircle2" type="Sprite" parent="." index="5"]

editor/display_folded = true
visible = false
position = Vector2( 628.585, 323.079 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="yellowCircle2" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/blink = SubResource( 4 )
blend_times = [  ]

[node name="yellowCircle3" type="Sprite" parent="." index="6"]

editor/display_folded = true
visible = false
position = Vector2( 863.488, 317.835 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="yellowCircle3" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/blink = SubResource( 5 )
blend_times = [  ]

[node name="redCircle" type="Sprite" parent="." index="7"]

editor/display_folded = true
visible = false
position = Vector2( 625.013, 321.193 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="redCircle" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/blink = SubResource( 6 )
blend_times = [  ]

[node name="Timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.6
one_shot = false
autostart = false


